# dvr

./: .gitignore  db.py  defaults.py  dvb.py  filmweb.py  justfile  main.py  models.py  notify.py  pyproject.toml  rec.py  requirements.txt
.github/workflows/: pylint.yml
