[project]
name = "dvr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "bpython>=0.24",
    "click>=8.1.7",
    "isort>=5.13.2",
    "loguru>=0.7.3",
    "prompt-toolkit>=3.0.48",
    "psutil>=6.1.0",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.2",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "setuptools>=75.6.0",
    "sqlalchemy>=2.0.38",
    "unidecode>=1.3.8",
]
